--- a/molly/apps/feeds/templates/feeds/events/item_list.html
+++ b/molly/apps/feeds/templates/feeds/events/item_list.html
@@ -9,7 +9,7 @@
 
 {% block pagetitle %}{% trans "Events feed" %}{% endblock %}
 {# Significant whitespace on line below #}
-{% block title %}{% trans "Events feed:" %} {{ feed.title }}{% endblock %}
+{% block title %}{% trans "Events feed" %}: {{ feed.title }}{% endblock %}
 
 {% block content %}
 
