--- a/molly/apps/feeds/templates/feeds/news/item_list.html
+++ b/molly/apps/feeds/templates/feeds/news/item_list.html
@@ -9,7 +9,7 @@
 
 {% block pagetitle %}{% trans "News feed" %}{% endblock %}
 {# Significant whitespace on next line #}
-{% block title %}{% trans "News feed:" %} {{ feed.title }}{% endblock %}
+{% block title %}{% trans "News feed" %}: {{ feed.title }}{% endblock %}
 
 {% block content %}
 
