--- a/molly/apps/home/templates/home/messages.html
+++ b/molly/apps/home/templates/home/messages.html
@@ -11,8 +11,10 @@
     <h2>{% trans "Messages from the developers" %}</h2>
   </div>
   <div class="section-content"><div class="note"><div class="bubble pad-10">
-    {% trans "The developers would like to thank you for using {{ site_name }},
-    and would like to ask your help in making it better." %}
+    {% blocktrans  %}
+	The developers would like to thank you for using {{ site_name }},
+    and would like to ask your help in making it better.
+    {% endblocktrans %}
   </div></div>
 
 
