--- a/molly/apps/feeds/templates/feeds/events/index.html
+++ b/molly/apps/feeds/templates/feeds/events/index.html
@@ -6,7 +6,7 @@
 {% search_form %}
 <form method="get" action="{% url search:index %}">
     <!-- Doing the devil's work below: couldn't get a CSS design to work with Blackberry 8900 so using Tables as a last resort. Tim F -->
-<h2 class="invisible">{% trans "Search News" %}</h2>
+<h2 class="invisible">{% trans "Search Events" %}</h2>
 <table class="search"><tbody>
         <tr><td>
                 <label style="display:none;" for="id_query">{% trans "Search News Box" %}</label>
