--- a/molly/apps/places/templates/places/entity_without_location.html
+++ b/molly/apps/places/templates/places/entity_without_location.html
@@ -1,15 +1,29 @@
 {% extends "places/base.html" %}
 
-{% block title %}{{ entity_type.verbose_name_plural|capfirst }} near {% if entity %}{{ entity.type }}{% else %}me{% endif %}{% endblock %}
+{% block title %}
+{% if entity %}
+	{% blocktrans with entity_type.verbose_name_plural|capfirst as type_name and entity.title as title %}
+		{{ type_name }} near {{ title }}
+	{% endblocktrans %}
+{% else %}
+	{% blocktrans with entity_type.verbose_name_plural|capfirst as type_name %}
+		{{ type_name }} near me
+	{% endblocktrans %}
+{% endif %}
+{% endblock %}
 
 
 {% block content %}
 
 <div class="section">
 <div class="header">
-  <h2>{{ entity_type.verbose_name_plural }} near {{ entity.title }}</h2>
+  <h2>
+	{% blocktrans with entity_type.verbose_name_plural as type_name and entity.title as title %}
+		{{ type_name }} near {{ title }}
+	{% endblocktrans %}
+  </h2>
   <div class="note"><div class="bubble pad-10">
-    Unfortunately, we do not have a location for this object, and so cannot tell you what is near it.
+    {% trans "Unfortunately, we do not have a location for this object, and so cannot tell you what is near it." %}
   </div>
 </div>
 </div>
