--- a/molly/apps/places/templates/places/nearby_list.html
+++ b/molly/apps/places/templates/places/nearby_list.html
@@ -1,5 +1,5 @@
 {% extends "places/base.html" %}{% load molly_utils %}
-
+{% load i18n %}
 {% block extrahead %}{{ block.super }}{% if entity %}
 <meta name="robots" content="noindex" />{% endif %}{% endblock %}
 
@@ -13,11 +13,20 @@
   <h2>{{ name }}</h2>
 </div>
 	<ul class="link-list">
-	{% for entity_type in types %}{% if entity %}
-	    <li><a href="{% url places:entity-nearby-detail entity.identifier_scheme,entity.identifier_value,entity_type.slug %}">
-	{% else %}
-	    <li><a href="{% url places:nearby-detail entity_type.slug %}">
-	{% endif %} {{ entity_type.verbose_name_plural|capfirst }} <small>({{ entity_type.entities_found }} within {{ entity_type.max_distance|round_up_10 }}m)</small></a></li>{% endfor %}
+	{% for entity_type in types %}
+		<li>
+		{% if entity %}
+	    	<a href="{% url places:entity-nearby-detail entity.identifier_scheme,entity.identifier_value,entity_type.slug %}">
+		{% else %}
+	    	<a href="{% url places:nearby-detail entity_type.slug %}">
+		{% endif %} 
+		{{ entity_type.verbose_name_plural|capfirst }} 
+		<small>
+		{% blocktrans with entity_type.entities_found as quantity and entity_type.max_distance|round_up_10 as distance %}
+			({{ quantity }} within {{ distance }}m)
+		{% endblocktrans %}
+		</small></a></li>
+	{% endfor %}
 	</ul>
 </div>
 {% endfor %}
