--- a/molly/apps/places/templates/places/update_osm.html
+++ b/molly/apps/places/templates/places/update_osm.html
@@ -1,7 +1,10 @@
 {% extends "places/base.html" %}
 {% load molly_maps %}{% load molly_utils %}
 
-{% block title %}Update {{ entity.title }}{% endblock %}
+{% block title %}
+{% blocktrans entity.title as title %}
+	Update {{ title }}
+{% endblocktrans %}{% endblock %}
 
 {% block extrahead %}{{ block.super }}
 <meta name="robots" content="noindex"/>{% endblock %}
@@ -9,45 +12,57 @@
 {% block content %}
 
 <div class="section">
-  <h2>Important information</h2>
+  <h2>{% trans "Important information" %}</h2>
   
   <div class="article"><div class="bubble pad-5">
     <p>
-      Thank you for wanting to improve the data provided by {{ site_name }}.
+	{% blocktrans %}
+	  Thank you for wanting to improve the data provided by {{ site_name }}.
       However, before you submit any changes, you should be aware of the
-      following terms.
+      following terms.	
+	{% endblocktrans %}
     </p>
     
     <p style="margin-top:0.5em;">
+	{% blocktrans %}
       Your contribution will be released into the Public Domain, and then
       submitted to OpenStreetMap by {{ site_name }}.
+	{% endblocktrans %}
     </p>
     
     <p style="margin-top:0.5em;">
+	{% blocktrans %}
       Your changes will be checked by a member of the {{ site_name }} team
       before being uploaded. {{ site_name }} may tidy or normalise the data you
       provide before they are uploaded using the {{ site_name }} OSM account.
+	{% endblocktrans %}
     </p>
     
     <p style="margin-top:0.5em;">
+	{% blocktrans %}
       If you would like to be named as the original author of the changes,
       please provide your name and tick the attribution box. Your e-mail
       address will never be submitted to OSM, but may be used by us to clarify
       any changes you provide.
+	{% endblocktrans %}
     </p>
     
     <p style="margin-top:0.5em;">
-      You may be interested to read <a href="{% url places:static-openstreetmap %}">further information about
+	{% url places:static-openstreetmap as osm_url %}
+	{% blocktrans %}
+      You may be interested to read <a href="{{ osm_url }}">further information about
       OpenStreetMap and other ways in which one may contribute</a>.
+	{% endblocktrans %}
     </p>
   </div></div>
 </div>
 
 <div class="section">
-  <h2>Map</h2>
+  <h2>{% trans "Map" %}</h2>
   <div class="note"><div class="bubble pad-10">
-    You are submitting an update to the {{ entity.entity_type.verbose_name }}
-    <em>&quot;{{ entity.title }}&quot;</em>.
+	{% blocktrans with entity.primary_type.verbose_name as type_name and entity.title as title %}
+		You are submitting an update to the {{ type_name }} <em>&quot;{{ title }}&quot;</em>.
+	{% endblocktrans %}
   </div>
   
   {% render_location_map entity.location %}
@@ -58,15 +73,17 @@
 <form method="post" action=".">
   {% csrf_token %}
     <p>
-      Not all fields will be relevant to the item you are updating, and all
-      fields are optional.
+    {% blocktrans %}
+		Not all fields will be relevant to the item you are updating, and all
+	    fields are optional.
+    {% endblocktrans %}
     </p>
       
 <table>
   <tbody>
     <tr>
       <th colspan="2">
-        Provide your name and tick the box to be attributed for the change.
+        {% trans "Provide your name and tick the box to be attributed for the change." %}
       </th>
     </tr>
     <tr>
@@ -80,7 +97,7 @@
     
     <tr>
       <th colspan="2">
-        Your e-mail address is useful should we want to clarify any change you make.
+        {% trans "Your e-mail address is useful should we want to clarify any change you make." %}
       </th>
     </tr>
     <tr>
@@ -90,7 +107,7 @@
     
     <tr>
       <th colspan="2">
-        The following are general properties for most types of item.
+        {% trans "The following are general properties for most types of item." %}
       </th>
     </tr>
     <tr>
@@ -120,8 +137,10 @@
     
     <tr>
       <th colspan="2">
-        This next two about food apply mostly to pubs. For things that obviously serve food (e.g.
-        restaurants), feel free to leave this empty.
+		{% blocktrans %}
+			This next two about food apply mostly to pubs. For things that obviously serve food (e.g.
+	        restaurants), feel free to leave this empty.
+		{% endblocktrans %}
       </th>
     </tr>
     <tr>
@@ -135,8 +154,10 @@
 
     <tr>
       <th colspan="2">
+		{% blocktrans %}
         If there is an ATM accessible at all hours here, please set this. This
         may be left blank if you are editing an ATM.
+		{% endblocktrans %}
       </th>
     </tr>
     <tr>
@@ -146,8 +167,10 @@
 
     <tr>
       <th colspan="2">
+		{% blocktrans %}
         The following only apply to post boxes. The reference is normally
         printed at the bottom of the details on the post box.
+		{% endblocktrans %}
       </th>
     </tr>
     <tr>
@@ -161,7 +184,7 @@
 
     <tr>
       <th colspan="2">
-        For car parks and bicycle parking, please provide the number of spaces.
+        {% trans "For car parks and bicycle parking, please provide the number of spaces." %}
       </th>
     </tr>
     <tr>
@@ -171,8 +194,10 @@
 
     <tr>
       <th colspan="2">
+		{% blocktrans %}
         If you have any other information you think should be included, please
         tell us about it here.
+		{% endblocktrans %}
       </th>
     </tr>
     <tr>
@@ -182,13 +207,15 @@
   <tfoot>
     <tr>
       <th colspan="2">
+		{% blocktrans %}
         If you are happy with your changes and agree to the terms above, you
         may now click 'Submit'.
+		{% endblocktrans %}
       </th>
     </tr>
     <tr>
       <th colspan="2">
-        <input type="submit" value="Submit"/>
+        <input type="submit" value='{% trans "Submit" %}'/>
       </th>
     </tr>
   </tfoot>
