--- a/molly/apps/places/templates/places/metadata/osm.html
+++ b/molly/apps/places/templates/places/metadata/osm.html
@@ -1,10 +1,10 @@
 {% load molly_osm %}{% load molly_utils %}
-
+{% load i18n %}
 {% if entity|osm_tags or entity.metadata.osm.tags.phone or entity.metadata.osm.tags.wikipedia or entity.metadata.osm.tags.website_mobile or entity.metadata.osm.tags.website or entity.metadata.osm.tags.url %}
 
 <div class="section">
   <div class="header">
-    <h2>Information from OpenStreetMap</h2>
+    <h2>{% trans "Information from OpenStreetMap" %}</h2>
   </div>
   {% if entity|osm_tags %}
   <div class="section-content no-round-bottom">
@@ -23,7 +23,10 @@
     {% if entity.metadata.osm.tags.phone %}
       <li>
           <a class="phone" href="{{ entity.metadata.osm.tags.phone|telephone_uri }}">
-              Call <em>{{ entity.title }}</em><br/>
+			  {% blocktrans with entity.title as title %}
+			  	Call <em>{{ title }}</em>
+			  {% endblocktrans %}
+			  <br/>
               <small>{{ entity.metadata.osm.tags.phone|telephone:"nolink" }}</small>
           </a>
       </li>
@@ -31,28 +34,28 @@
     {% if entity.metadata.osm.tags.wikipedia %}
       <li>
           <a class="external-mobile" href="{{ entity.metadata.osm.tags.wikipedia|osm_tag_wikipedia_uri|urlencode }}">
-              Wikipedia article
+              {% trans "Wikipedia article" %}
           </a>
       </li>
     {% endif %}
     {% if entity.metadata.osm.tags.website_mobile %}
           <li>
               <a class="external" href="{{ entity.metadata.osm.tags.website_mobile|escape }}">
-                  Website
+                  {% trans "Website" %}
               </a>
           </li>
     {% else %}
       {% if entity.metadata.osm.tags.website %}
           <li>
               <a class="external" href="{{ entity.metadata.osm.tags.website|escape }}">
-                  Website
+                  {% trans "Website" %}
               </a>
           </li>
       {% else %}
         {% if entity.metadata.osm.tags.url %}
           <li>
               <a class="external" href="{{ entity.metadata.osm.tags.url|escape }}">
-                  Website
+                  {% trans "Website" %}
               </a>
           </li>
         {% endif %}
@@ -60,7 +63,7 @@
     {% endif %}
     <li>
       <a href="{% url places:entity-update entity.identifier_scheme entity.identifier_value %}">
-        Suggest a correction
+        {% trans "Suggest a correction" %}
       </a>
     </li>
   </ul>
