--- a/molly/apps/places/templates/places/metadata/real_time_information.html
+++ b/molly/apps/places/templates/places/metadata/real_time_information.html
@@ -1,4 +1,6 @@
 {% load molly_utils %}
+{% load i18n %}
+
 {% if entity.metadata.real_time_information %}
 <div id="{{ entity.identifier_scheme }}-{{ entity.identifier_value }}">
     {% if entity.metadata.real_time_information.pip_info %}
@@ -10,7 +12,7 @@
     {% else %}
     <ul class="content-list no-round-bottom">
         {% if not entity.metadata.real_time_information.services %}
-            <li>Sorry, there is currently no real time information for this stop.</li>
+            <li>{% trans "Sorry, there is currently no real time information for this stop." %}</li>
         {% endif %}
     </ul>
     {% endif %}
@@ -20,9 +22,9 @@
    <table class="real-time-information">
     <thead style="display:none;">
         <tr>
-            <th>Service</th>
-            <th>Destination</th>
-            <th>Expected</th>
+            <th>{% trans "Service" %}</th>
+            <th>{% trans "Destination" %}</th>
+            <th>{% trans "Expected" %}</th>
         </tr>
     </thead>
     <tbody id="bus_times">
@@ -33,7 +35,10 @@
             <td>{{ service.next }}</td>
         </tr>
         <tr class="notopborder">
-            <td colspan="2"><small>Next: {% if service.following %}{{ service.following|join:", " }}{% else %}<em>No further info</em>{% endif %}</small></td>
+			{# Translators: Next as in next service #}
+            <td colspan="2"><small>
+				{% trans "Next" %}: {% if service.following %}{{ service.following|join:", " }}{% else %}<em>{% trans "No further info" %}</em>{% endif %}
+			</small></td>
         </tr>
     {% endfor %}
     </tbody>
